DAOS-7174 doc: add label support to admin and user guide
- Change command lines in both admin and user guide to
  use labels for both pools and containers instead of UUID.
- Add workflow section to user documentation
- Rename POSIX to filesystem and provide more details in the
  dfuse section.
- Remove references to `daos_server network scan` in favor of
  `dmg network scan`
- Several doc cleanups.

A few dmg and daos utility interface changes:
- support 'daos cont ls/list' to list containers
- support lsattr/delattr/setattr for attributes
- implement other useful shortcuts

Signed-off-by: Johann Lombardi <johann.lombardi@intel.com>

--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -54,13 +54,14 @@ nav:
         - 'Utilities and Usage Examples': 'admin/utilities_examples.md'
         - 'Environment Variables': 'admin/env_variables.md'
     - User Guide:
+        - 'Workflow': 'user/worflow.md'
         - 'Container Management': 'user/container.md'
-        - 'Native Programming Interface': 'user/interface.md'
-        - 'POSIX Namespace': 'user/posix.md'
+        - 'File System': 'user/filesystem.md'
         - 'MPI-IO Support': 'user/mpi-io.md'
         - 'HDF5 Support': 'user/hdf5.md'
         - 'Spark and Hadoop': 'user/spark.md'
         - 'Data Mover': 'user/datamover.md'
+        - 'Native Programming Interface': 'user/interface.md'
     - Releases:
         - 'Release Notes v2.0': 'release/release_notes_v2_0.md'
         - 'Support Matrix': 'release/support_matrix.md'
