--- a/src/tests/ftest/erasurecode/ec_mdtest_smoke.yaml
+++ b/src/tests/ftest/erasurecode/ec_mdtest_smoke.yaml
@@ -42,7 +42,7 @@ pool:
     name: daos_server
     control_method: dmg
     size: 53%
-    scm_ratio: 50
+    tier_ratio: 50
 container:
     type: POSIX
     control_method: daos
