CART-963 tests: pylint unused var: {gu,ca}rt_utils
Skip-func-hw-test: true

Signed-off-by: Ethan Mallove <ethanx.a.mallove@intel.com>

--- a/src/tests/ftest/cart/SConscript
+++ b/src/tests/ftest/cart/SConscript
@@ -62,7 +62,7 @@ FAULT_STATUS_TEST = 'fault_status.c'
 def scons():
     """scons function"""
 
-    Import('env', 'prereqs', 'cart_lib', 'gurt_lib')
+    Import('env', 'prereqs')
     Import('cart_utils_objs')
 
     ##############################
