--- a/src/tests/ftest/osa/osa_online_extend.yaml
+++ b/src/tests/ftest/osa/osa_online_extend.yaml
@@ -13,6 +13,8 @@ extra_servers:
     - server-C
 timeout: 1000
 job_manager_timeout: 330
+setup:
+  start_servers_once: False
 server_config:
   name: daos_server
   engines_per_host: 2
@@ -52,27 +54,61 @@ pool:
   nvme_size: 108000000000
   svcn: 4
   control_method: dmg
+  rebuild_timeout: 120
+  pool_query_timeout: 30
 container:
-  type: POSIX
-  control_method: daos
-  properties: cksum:crc64,cksum_size:16384,srv_cksum:on
-  oclass: RP_2G1
+    type: POSIX
+    control_method: daos
+    properties: cksum:crc16,cksum_size:16384,srv_cksum:on,rf:1
+    oclass: RP_2G1
 ior:
-  no_parallel_job: 2
   client_processes:
     np: 2
   test_file: /testFile
-  repetitions: 35
+  repetitions: 10
   dfs_destroy: False
   iorflags:
-    ior_flags:
-      - "-w -r -R -k -G 1"
-    ior_api:
-      - DFS
-    obj_class:
-      - "RP_2G1"
+    write_flags: "-w -F -k -G 1"
+    read_flags: "-F -r -R -k -G 1"
+    api: DFS
+    dfs_oclass: RP_2G1
+    dfs_dir_oclass: RP_2G1
   ior_test_sequence:
-  #   - [scmsize, nvmesize, transfersize, blocksize, PASS/FAIL(Expected) ]
-  #    The values are set to be in the multiples of 10.
-  #    Values are appx GB.
-      - [4000000000, 18000000000, 4000, 50000000, PASS]          #[4G, 18G, 4K, 51M, PASS]
+    #   - [scmsize, nvmesize, transfersize, blocksize, PASS/FAIL(Expected) ]
+    #    The values are set to be in the multiples of 10.
+    #    Values are appx GB.
+    - [4000000000, 18000000000, 40000, 500000000, PASS]          #[4G, 18G, 40K, 510M, PASS]
+mdtest:
+  api: DFS
+  client_processes:
+    np: 2
+  num_of_files_dirs: 100
+  test_dir: "/tmp/"
+  iteration: 10
+  dfs_destroy: False
+  dfs_oclass: RP_2G1
+  dfs_dir_oclass: RP_2G1
+  manager: "MPICH"
+  flags: "-u"
+  wr_size:
+    32K:
+      write_bytes: 32768
+      read_bytes: 32768
+  verbosity_value: 1
+  depth: 0
+daos_racer:
+  runtime: 480
+  clush_timeout: 1000
+test_obj_class:
+  oclass:
+    - S1
+loop_test:
+  iterations: 3
+aggregation:
+  test_with_aggregation: True
+rebuild:
+  test_with_rebuild: True
+checksum:
+  test_with_checksum: False
+test_ranks:
+  rank_list: ["4,5"]
