--- a/src/tests/ftest/io/posix_stat.yaml
+++ b/src/tests/ftest/io/posix_stat.yaml
@@ -12,8 +12,8 @@ pool:
 container:
   type: POSIX
   control_method: daos
-#block_sizes: [1M, 10M, 100M, 500M]
-block_sizes: [1M]
+block_sizes: [1M, 10M, 100M, 500M]
+#block_sizes: [1M]
 ior:
   api: POSIX
   flags: "-v -w -k"
