CART-89: Update mercury to release v2.0.1 (#6036)
Signed-off-by: Alexander A Oganezov <alexander.a.oganezov@intel.com>

--- a/utils/build.config
+++ b/utils/build.config
@@ -9,6 +9,6 @@ ISAL_CRYPTO = v2.23.0
 SPDK = 7232c450f97cf925a521a60ef2561eca4b65c41a
 OFI = v1.12.0
 OPENPA = v1.0.4
-MERCURY = v2.0.1rc1
+MERCURY = v2.0.1
 PSM2 = PSM2_11.2.78
 PROTOBUFC = v1.3.3
