DAOS-8023 utils: Update raft to fix slow re-elections
Update raft to fix slow leader re-elections introduced by Pre-Vote.

Signed-off-by: Li Wei <wei.g.li@intel.com>

--- a/debian/control
+++ b/debian/control
@@ -28,7 +28,7 @@ Build-Depends: debhelper (>= 10),
                libboost-dev,
                libspdk-dev,
                libipmctl-dev,
-               libraft-dev (= 0.8.0-1386.g7509891),
+               libraft-dev (= 0.8.0-1387.g3b0f9f0),
                python3-tabulate,
                liblz4-dev
 Standards-Version: 4.1.2
