DAOS-7920 build: Include pydaos and storage estimator in installed site packages dir (#6058)
Include pydaos and storage estimator in installed site packages dir

Signed-off-by: Maureen Jean <maureen.jean@intel.com>

--- a/src/client/pydaos/SConscript
+++ b/src/client/pydaos/SConscript
@@ -1,8 +1,9 @@
 """Build pydaos client"""
 import daos_build
+import sys
 import compiler_setup
 
-def build_shim_module(env, lib_prefix, version):
+def build_shim_module(env, lib_prefix):
     """Build PyDAOS shim module for the specified python version"""
 
     if GetOption('help'):
@@ -10,8 +11,9 @@ def build_shim_module(env, lib_prefix, version):
 
     new_env = env.Clone()
     extra_flags = ""
-
-    if version == "3":
+    version = "{}.{}".format(
+        sys.version_info.major, sys.version_info.minor)
+    if sys.version_info.major == 3:
         tgt_name = 'pydaos_shim'
         extra_flags = " -D__USE_PYTHON3__==1"
         new_env.ParseConfig("pkg-config --cflags --libs python3")
@@ -53,7 +55,7 @@ def scons():
     """Execute build"""
     Import('base_env')
 
-    build_shim_module(base_env, '$PREFIX/lib64/', "3")
+    build_shim_module(base_env, '$PREFIX/lib64/')
 
 if __name__ == "SCons.Script":
     scons()
