--- a/src/tests/ftest/io/posix_stat.yaml
+++ b/src/tests/ftest/io/posix_stat.yaml
@@ -1,6 +1,7 @@
 hosts:
   test_servers:
     - server-A
+    - server-B
   test_clients:
     - client-A
 timeout: 600
@@ -13,24 +14,9 @@ container:
   type: POSIX
   control_method: daos
 block_sizes: [1M, 10M, 100M, 500M]
-#block_sizes: [1M]
 ior:
   api: POSIX
   flags: "-v -w -k"
   max_duration: 10
 dfuse:
   mount_dir: "/tmp/daos_dfuse"
-
-
-# Working
-# hosts:
-#   test_servers:
-#     - server-A
-# timeout: 60
-# server_config:
-#   name: daos_server
-# pool:
-#   mode: 511
-#   name: daos_server
-#   scm_size: 1073741824
-#   control_method: dmg
