--- a/src/tests/ftest/ior/ior_small.yaml
+++ b/src/tests/ftest/ior/ior_small.yaml
@@ -1,14 +1,14 @@
 hosts:
   test_servers:
     - server-A
-    - server-B
-    - server-C
-    - server-D
+#    - server-B
+#    - server-C
+#    - server-D
   test_clients:
     - client-E
-    - client-F
-    - client-G
-    - client-H
+#    - client-F
+#    - client-G
+#    - client-H
 timeout: 200
 server_config:
     name: daos_server
@@ -38,10 +38,10 @@ container:
 ior:
     ior_timeout: 30
     client_processes:
-        np_16:
-            np: 16
+        np_4:
+            np: 4
     test_file: daos:testFile
-    repetitions: 2
+    repetitions: 1
     dfs_destroy: False
     iorflags:
           ior_flags:
@@ -49,12 +49,7 @@ ior:
             - "-v -W -w -r -R -F"
           ior_api:
             - DFS
-            - MPIIO
-            - POSIX
-            - HDF5
-            - HDF5-VOL
           transfer_block_size:
-            - [256B, 2M]
             - [1M, 32M]
           obj_class:
             - "SX"
