Add fedora, modify centos 8 so it works.  Change leap 15 repo.
Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/utils/docker/Dockerfile.fedora
+++ b/utils/docker/Dockerfile.fedora
@@ -6,7 +6,7 @@
 #
 
 # Pull base image
-FROM centos:8
+FROM fedora:34
 LABEL maintainer="daos@daos.groups.io"
 
 # Intermittent cache-bust.  Used to reduce load on the actual CACHEBUST later.
