--- a/src/tests/ftest/cart/rpc/cart_rpc_one_node_with_swim_notification_on_rank_eviction.yaml
+++ b/src/tests/ftest/cart/rpc/cart_rpc_one_node_with_swim_notification_on_rank_eviction.yaml
@@ -27,7 +27,7 @@ tests: !mux
   test_group:
     name: test_group_basic
     test_servers_bin: crt_launch
-    test_servers_arg: "-e test_group_np_srv --name tg_srv_grp_swim_test --use_cfg 0 --register_swim_callback 1 --shutdown_delay 2"
+    test_servers_arg: "-e test_group_np_srv --name tg_srv_grp_swim_test --use_cfg 0 --register_swim_callback 1 --shutdown_delay 2 --write_completion_file"
     test_servers_env: ""
     test_servers_ppn: "3"
     test_clients_bin: test_group_np_cli
@@ -39,4 +39,5 @@ tests: !mux
       - "--name client_group --attach_to tg_srv_grp_swim_test --rank 0,1 --verify_swim_status 'rank2=dead'  --skip_shutdown --skip_check_in"
       - "--name client_group --attach_to tg_srv_grp_swim_test --rank 0,1 --verify_swim_status 'rank1=alive' --skip_shutdown --skip_check_in"
       - "--name client_group --attach_to tg_srv_grp_swim_test --rank 0,1 --verify_swim_status 'rank0=alive' --skip_shutdown --skip_check_in"
+      - "--name client_group --attach_to tg_srv_grp_swim_test --rank 0,1 --disable_swim --skip_shutdown --skip_check_in"
       - "--name client_group --attach_to tg_srv_grp_swim_test --rank 0,1 --shut_only"
