--- a/src/tests/ftest/ior/ior_intercept_messages.yaml
+++ b/src/tests/ftest/ior/ior_intercept_messages.yaml
@@ -13,7 +13,7 @@ server_config:
 pool:
     mode: 146 # 146 is RW
     name: daos_server
-    scm_size: 16G
+    scm_size: 8G
     nvme_size: 100G
     svcn: 1
     control_method: dmg
@@ -26,22 +26,15 @@ ior:
             np: 16
     test_file: daos:testFile
     repetitions: 1
-# Remove the below line once DAOS-3143 is resolved
-    dfs_destroy: False
     iorflags:
         ssf:
           flags: "-v -D 10 -w -r"
           ior_api:
-            - DFS
             - POSIX
           transfersize_blocksize:
             1M:
               transfer_size: '1M'
               block_size: '100M'
-              # Expected performance improvement
-              # of write and read for the specific
-              # transfer/block size when using
-              # interception library.
               write_x: 2
               read_x: 1
           objectclass:
@@ -50,3 +43,11 @@ ior:
 dfuse:
     mount_dir: "/tmp/daos_dfuse/"
     disable_caching: True
+tests:
+  D_IL_REPORT: !mux
+    summary_only:
+      value: "0"
+    one_intercept:
+      value: "1"
+    two_intercept:
+      value: "2"
