Bug fixes in commit     Added posix folder to installation     Re-ordered imports     Ignore pylint warning too many ancestors
Quick-build: true
Skip-unit-tests: true
Skip-nlt: true
Skip-unit-test: true
Skip-func-hw-test: true
Test-tag-vm: pr simul simul_failure
Signed-off-by: Omar Ocampo <omar.ocampo.coronado@intel.com>

--- a/src/tests/ftest/SConscript
+++ b/src/tests/ftest/SConscript
@@ -13,7 +13,7 @@ def scons():
             'daos_perf', 'daos_racer', 'daos_vol',
             'ior', 'mdtest',
             'daos_test', 'data', 'io', 'network', 'nvme',
-            'object', 'osa', 'pool', 'rebuild', 'security',
+            'object', 'osa', 'pool', 'posix', 'rebuild', 'security',
             'server', 'soak', 'unittest', 'erasurecode',
             'datamover', 'scripts', 'dbench', 'harness']
 
