CART-974 tests: Make self_test daos_agent aware
  * Configure Scons to include/link DAOS client agent library
  * Use dc_mgmt_net_cfg() to set OFI*, CRT* env vars
  * Add --use-daos-agent-env cli option to self_test

Skip-func-hw-test: true

Signed-off-by: Ethan Mallove <ethanx.a.mallove@intel.com>

--- a/src/tests/ftest/network/cart_self_test.yaml
+++ b/src/tests/ftest/network/cart_self_test.yaml
@@ -16,6 +16,7 @@ self_test:
   repetitions: 1000
   endpoint: 0:0
   max_inflight_rpcs: 16
+  use_daos_agent_env: ""
   message_sizes_mux: !mux
     small_io:
       message_sizes: "0"
