--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -75,7 +75,8 @@ jobs:
                           --tag build-image
     - name: Build and Test
       run: ./utils/run_in_ga_wrapper.sh
-    - name: Check dmesg
+    - name: Dmesg
+      # Always save dmesg, to be able to check for DAOS-7764 or other critical issues.
       if: always()
       run: sudo dmesg
     - name: Publish NLT test results
