--- a/src/utils/self_test/SConscript
+++ b/src/utils/self_test/SConscript
@@ -13,7 +13,7 @@ SELF_TEST = 'self_test.c'
 def scons():
     """scons function"""
 
-    Import('env', 'prereqs')
+    Import('env', 'prereqs', 'cart_lib', 'gurt_lib', 'cart_utils_objs')
 
     tenv = env.Clone(LIBS=[])
 
@@ -21,7 +21,8 @@ def scons():
     prereqs.require(tenv, 'mercury')
     tenv.AppendUnique(FLAGS='-pthread')
 
-    self_test = daos_build.program(tenv, SELF_TEST)
+    self_test = daos_build.program(tenv, [SELF_TEST, cart_utils_objs])
+    tenv.Requires(self_test, [cart_lib, gurt_lib])
     tenv.Install(os.path.join("$PREFIX", 'bin'), self_test)
 
 if __name__ == "SCons.Script":
