--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,8 @@ jobs:
       run: docker build . -f utils/docker/Dockerfile.centos.8
                           --build-arg DEPS_JOBS=8 --build-arg DAOS_BUILD=no
                           --build-arg BASE_DISTRO=fedora:34
+    - name: Turn on logg checking
+      run: echo ::add-matcher::ci/daos-doxygen-matcher.json
     - name: Build DAOS in Docker image
       run: docker build . -f utils/docker/Dockerfile.centos.8
                           --build-arg COMPILER=${{ matrix.compiler }}
