--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
       run: docker build . -f utils/docker/Dockerfile.centos.8
                           --build-arg DEPS_JOBS=8 --build-arg DAOS_BUILD=no
                           --build-arg BASE_DISTRO=fedora:34
-    - name: Turn on logg checking
+    - name: Turn on log checking
       run: echo ::add-matcher::ci/daos-doxygen-matcher.json
     - name: Build DAOS in Docker image
       run: docker build . -f utils/docker/Dockerfile.centos.8
@@ -94,3 +94,5 @@ jobs:
                           --build-arg DAOS_BUILD_TYPE=dev
                           --build-arg COMPILER=${{ matrix.compiler }}
                           --build-arg BASE_DISTRO=fedora:34
+    - name: Turn off log checking
+      run: echo ::remove-matcher owner=daos-gcc::
