DAOS-7764 gha: Re-instate workaround for spdk build issue. (#6220)
* DAOS-7764 gha: Re-instate workaround for spdk build issue.

This workaround was removed last week after testing, however
once the removal was landed we're seeing the bug again so
add back in the workaround.

Add some diagnostics to help validate the issue.

Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -75,6 +75,10 @@ jobs:
                           --tag build-image
     - name: Build and Test
       run: ./utils/run_in_ga_wrapper.sh
+    - name: Dmesg
+      # Always save dmesg, to be able to check for DAOS-7764 or other critical issues.
+      if: always()
+      run: sudo dmesg
     - name: Publish NLT test results
       if: always()
       uses: EnricoMi/publish-unit-test-result-action@v1.17
