--- a/src/tests/ftest/ior/ior_small.yaml
+++ b/src/tests/ftest/ior/ior_small.yaml
@@ -1,8 +1,14 @@
 hosts:
   test_servers:
     - server-A
+    - server-B
+    - server-C
+    - server-D
   test_clients:
     - client-E
+    - client-F
+    - client-G
+    - client-H
 timeout: 200
 server_config:
     name: daos_server
@@ -32,10 +38,10 @@ container:
 ior:
     ior_timeout: 30
     client_processes:
-        np_4:
-            np: 4
+        np_16:
+            np: 16
     test_file: daos:testFile
-    repetitions: 1
+    repetitions: 2
     dfs_destroy: False
     iorflags:
           ior_flags:
@@ -43,7 +49,12 @@ ior:
             - "-v -W -w -r -R -F"
           ior_api:
             - DFS
+            - MPIIO
+            - POSIX
+            - HDF5
+            - HDF5-VOL
           transfer_block_size:
+            - [256B, 2M]
             - [1M, 32M]
           obj_class:
             - "SX"
