--- a/src/tests/ftest/io/posix_stat.yaml
+++ b/src/tests/ftest/io/posix_stat.yaml
@@ -6,9 +6,8 @@ hosts:
     - client-A
 timeout: 600
 pool:
-  mode: 511
   name: daos_server
-  scm_size: 1073741824
+  scm_size: 1G
   control_method: dmg
 container:
   type: POSIX
