DAOS-8049 Test: Fix nvme_fragmentation and nvme_fault test.
- Adding container RF property to nvme_fault.py tests.
  Skipped test because of DAOS-8080.
- Updated container UUID in to python dictionary after IOR writes
  and create the container

Signed-off-by: Samir Raval <samir.raval@intel.com>

--- a/src/tests/ftest/nvme/nvme_fault.yaml
+++ b/src/tests/ftest/nvme/nvme_fault.yaml
@@ -50,7 +50,7 @@ pool:
 container:
     type: POSIX
     control_method: daos
-    oclass: "RP_2G1"
+    properties: rf:1
 ior:
   api: "DFS"
   client_processes:
