--- a/src/utils/self_test/SConscript
+++ b/src/utils/self_test/SConscript
@@ -18,7 +18,7 @@ def scons():
 
     tenv = env.Clone(LIBS=[])
 
-    tenv.AppendUnique(LIBS=['cart', 'gurt', 'pthread', 'm', 'daos'])
+    tenv.AppendUnique(LIBS=['cart', 'gurt', 'pthread', 'm', 'daos', 'daos_common'])
     prereqs.require(tenv, 'mercury', 'protobufc')
     tenv.AppendUnique(FLAGS='-pthread')
 
