Try a new patch
Signed-off-by: Jeff Olivier <jeffrey.v.olivier@intel.com>

--- a/src/client/api/SConscript
+++ b/src/client/api/SConscript
@@ -13,13 +13,15 @@ def scons():
     denv = env.Clone()
     prereqs.require(denv, 'protobufc')
     libdaos_tgts = denv.SharedObject(LIBDAOS_SRC)
-    _compile_check = denv.Object(["compile_check_cpp.cpp", "compile_check.c"])
-
     Import('dc_pool_tgts', 'dc_co_tgts', 'dc_obj_tgts', 'dc_placement_tgts')
     Import('dc_mgmt_tgts', 'dc_array_tgts', 'dc_kv_tgts', 'dc_security_tgts')
     libdaos_tgts += dc_pool_tgts + dc_co_tgts + dc_placement_tgts + dc_obj_tgts
     libdaos_tgts += dc_mgmt_tgts + dc_array_tgts + dc_kv_tgts + dc_security_tgts
     Export('libdaos_tgts')
+
+    check_libs = ['daos', 'gurt', 'uuid']
+    _compile_check = daos_build.test(env, ["compile_check.c"], LIBS=check_libs)
+    _compile_check_cpp = daos_build.test(env, ["compile_check_cpp.cpp"], LIBS=check_libs)
 
     if prereqs.client_requested():
         libdaos= daos_build.library(env, 'daos', libdaos_tgts,
