--- a/src/client/api/SConscript
+++ b/src/client/api/SConscript
@@ -20,17 +20,17 @@ def scons():
     Export('libdaos_tgts')
 
     if prereqs.client_requested():
-        libdaos= daos_build.library(env, 'daos', libdaos_tgts,
+        libdaos= daos_build.library(denv, 'daos', libdaos_tgts,
                                      SHLIBVERSION=API_VERSION,
                                      LIBS=['daos_common'])
         if hasattr(env, 'InstallVersionedLib'):
-            env.InstallVersionedLib('$PREFIX/lib64/', libdaos,
+            denv.InstallVersionedLib('$PREFIX/lib64/', libdaos,
                                     SHLIBVERSION=API_VERSION)
         else:
             env.Install('$PREFIX/lib64/', libdaos)
         check_libs = ['daos', 'gurt', 'uuid']
-        _compile_check = daos_build.test(env, ["compile_check.c"], LIBS=check_libs)
-        _compile_check_cpp = daos_build.test(env, ["compile_check_cpp.cpp"], LIBS=check_libs)
+        _compile_check = daos_build.test(denv, ["compile_check.c"], LIBS=check_libs)
+        _compile_check_cpp = daos_build.test(denv, ["compile_check_cpp.cpp"], LIBS=check_libs)
 
 
     if prereqs.test_requested():
