--- a/src/tests/SConscript
+++ b/src/tests/SConscript
@@ -29,7 +29,7 @@ def scons():
 
     daos_build.program(denv, 'simple_array', 'simple_array.c', LIBS=libs)
     daos_build.program(denv, 'simple_obj', 'simple_obj.c', LIBS=libs)
-    libs += ['pthread', 'abt', 'dts']
+    libs += ['vos', 'bio', 'pthread', 'abt', 'dts']
 
     daos_racer = daos_build.program(denv, 'daos_racer',
                                     ['daos_racer.c'],
@@ -43,7 +43,6 @@ def scons():
                                    LIBS = libs)
     denv.Install('$PREFIX/bin/', daos_perf)
 
-    libs += ['vos', 'bio', 'abt']
     vos_engine = denv.SharedObject(['vos_engine.c'])
 
     vos_perf = daos_build.program(denv, 'vos_perf',
