--- a/src/tests/ftest/server/metadata.yaml
+++ b/src/tests/ftest/server/metadata.yaml
@@ -49,26 +49,20 @@ server_config:
       env_vars:
         - DAOS_MD_CAP=128
         - DD_MASK=mgmt,md,dsms,any
-
 pool:
-  createmode:
-    mode: 511
-  createset:
-    group: daos_server
-  createsvc:
-    svcn: 3
-  createsize:
-    scm_size: 1073741824
-    nvme_size: 8589934592
+  name: daos_server
+  svcn: 3
+  scm_size: 1G
+  nvme_size: 8G
   control_method: dmg
 ior:
-    clientslots:
-      slots: 1
-    repetitions: 1
-    dfs_destroy: False
-    iorwriteflags:
-      F: "-w -W -k -G 1"
-    iorreadflags:
-      F: "-r -R -G 1"
-    objectclass:
-      dfs_oclass: "SX"
+  clientslots:
+    slots: 1
+  repetitions: 1
+  dfs_destroy: False
+  iorwriteflags:
+    F: "-w -W -k -G 1"
+  iorreadflags:
+    F: "-r -R -G 1"
+  objectclass:
+    dfs_oclass: "SX"
