--- a/utils/config/examples/daos_server_unittests.yml
+++ b/utils/config/examples/daos_server_unittests.yml
@@ -29,6 +29,7 @@ engines:
   first_core: 0             # offset of the first core for service threads
   nr_xs_helpers: 0          # count of I/O offload threads per engine
   fabric_iface: lo          # map to OFI_INTERFACE=lo
+  fabric_iface_port: 31316  # map to OFI_PORT=31316
   log_mask: DEBUG,RPC=ERR,MEM=ERR
   log_file: /tmp/daos_engine.0.log # map to D_LOG_FILE=/tmp/daos_engine.0.log
 
