--- a/src/tests/SConscript
+++ b/src/tests/SConscript
@@ -23,6 +23,8 @@ def scons():
 
     # Add runtime paths for daos libraries
     denv.AppendUnique(RPATH_FULL=['$PREFIX/lib64/daos_srv'])
+    denv.AppendUnique(RPATH_FULL=['$PREFIX/lib64'])
+    denv.AppendUnique(LINKFLAGS=["-Wl,-rpath-link=%s" % Dir('../common').path])
 
     denv.Append(CPPPATH=[Dir('suite').srcnode()])
     prereqs.require(denv, 'argobots', 'hwloc', 'protobufc', 'pmdk', 'isal')
