Moving dfuse_bash_cm test from medium cluster to small cluster to save resources.
Skip-unit-tests: true
Test-tag: pr bashcmd dfusecachingcheck

Signed-off-by: Saurabh Tandan <saurabh.tandan@intel.com>

--- a/src/tests/ftest/io/dfuse_bash_cmd.yaml
+++ b/src/tests/ftest/io/dfuse_bash_cmd.yaml
@@ -1,9 +1,8 @@
 hosts:
   test_servers:
     - server-A
-    - server-B
   test_clients:
-    - client-C
+    - client-B
 timeout: 900
 server_config:
   name: daos_server
