DAOS-623 build: Remove build dir from rpath
*Remove build directories from rpath
*Add $ORIGIN to library runpath
*Remove /usr/lib for packaged components
*Add function for adding rpath-link to build directories for common
libraries.

Signed-off-by: Jeff Olivier <jeffrey.v.olivier@intel.com>

--- a/src/client/api/SConscript
+++ b/src/client/api/SConscript
@@ -5,6 +5,8 @@ def scons():
     """Execute build"""
     Import('env', 'base_env', 'API_VERSION', 'prereqs')
 
+    daos_build.add_build_rpath(base_env, Dir('.'))
+    daos_build.add_build_rpath(env, Dir('.'))
     env.AppendUnique(LIBPATH=[Dir('.')])
     base_env.AppendUnique(LIBPATH=[Dir('.')])
     denv = env.Clone()
