--- a/src/client/dfuse/test/SConscript
+++ b/src/client/dfuse/test/SConscript
@@ -51,7 +51,7 @@ def scons():
     tenv.AppendUnique(CPPPATH='../il')
     tenv.AppendUnique(LIBPATH='../il')
     tenv.AppendUnique(RPATH_FULL='$PREFIX/lib64')
-    tenv.AppendUnique(LINKFLAGS=["-Wl,-rpath-link=%s" % Dir('../../dfs').path])
+    daos_build.add_build_rpath(tenv, Dir('../../dfs').path)
 
     prereqs.require(tenv, 'cunit')
 
