--- a/src/common/SConscript
+++ b/src/common/SConscript
@@ -67,6 +67,8 @@ def scons():
 
     env.AppendUnique(LIBPATH=[Dir('.')])
     base_env.AppendUnique(LIBPATH=[Dir('.')])
+    daos_build.add_build_rpath(base_env, Dir('.').path)
+    daos_build.add_build_rpath(env, Dir('.').path)
 
     # Hack alert, the argobots headers are required but the shared
     # library isn't so add the dependency so the include path
