--- a/src/cart/SConscript
+++ b/src/cart/SConscript
@@ -73,8 +73,8 @@ def scons():
     Import('env', 'prereqs', 'swim_targets', 'gurt_lib', 'CART_VERSION')
     Import('conf_dir', 'base_env')
 
-    daos_build.add_build_rpath(base_env, Dir('.').path)
-    daos_build.add_build_rpath(env, Dir('.').path)
+    daos_build.add_build_rpath(base_env)
+    daos_build.add_build_rpath(env)
     base_env.AppendUnique(LIBPATH=[Dir('.')])
 
     env.Alias('install', '$PREFIX')
