--- a/src/utils/SConscript
+++ b/src/utils/SConscript
@@ -10,7 +10,9 @@ def scons():
 
     libs = ['daos', 'daos_common', 'uuid', 'dfs', 'duns', 'gurt', 'cart']
 
-    Import('env', 'API_VERSION')
+    Import('env', 'base_env', 'API_VERSION')
+    daos_build.add_build_rpath(env)
+    daos_build.add_build_rpath(base_env)
     env.AppendUnique(LIBPATH=[Dir('.')])
 
     denv = env.Clone()
