--- a/src/common/SConscript
+++ b/src/common/SConscript
@@ -43,11 +43,12 @@ def build_dts_library(env):
             print("Install and load mpich or openmpi\n")
             return
 
-    libraries = ['cmocka', 'daos_tests', 'vos', 'bio', 'abt']
+    libraries = ['cmocka','daos',  'daos_tests', 'vos', 'bio', 'abt']
 
     # Add runtime paths for daos libraries
     denv.AppendUnique(LINKFLAGS=[r'-Wl,-rpath=\$$ORIGIN/daos_srv'])
 
+    denv.AppendUnique(LIBPATH=["../client/api"])
     denv.AppendUnique(LIBPATH=["../vos"])
     denv.AppendUnique(LIBPATH=["../bio"])
 
