--- a/src/tests/ftest/fault_domain/fault_domain.yaml
+++ b/src/tests/ftest/fault_domain/fault_domain.yaml
@@ -17,31 +17,30 @@ fault_path:
 server_config:
   name: daos_server
   servers:
-    scm_size: 128
-    bdev_class: nvme
-    bdev_list: [ "aaaa:aa:aa.a"]
+    scm_size: 10
+number_pools: 5
 pool_0:
   name: daos_server
-  size: 9G
+  size: 1G
   nranks: 1
   control_method: dmg
 pool_1:
   name: daos_server
-  size: 27G
+  size: 3G
   nranks: 3
   control_method: dmg
 pool_2:
   name: daos_server
-  size: 27G
+  smc_size: 3G
   nranks: 3
   control_method: dmg
 pool_3:
   name: daos_server
-  size: 18G
+  scm_size: 2G
   nranks: 2
   control_method: dmg
 pool_4:
   name: daos_server
-  size: 18G
+  scm_size: 2G
   nranks: 2
   control_method: dmg
