--- a/src/tests/ftest/control/dmg_telemetry_io_basic.yaml
+++ b/src/tests/ftest/control/dmg_telemetry_io_basic.yaml
@@ -18,21 +18,23 @@ container:
   control_method: daos
 block_sizes: [10M, 500M]
 transfer_sizes: [1M]
-io_test_metrics: [
-  "engine_io_dtx_committed",
-  "engine_io_dtx_committed_max",
-  "engine_io_dtx_committed_mean",
-  "engine_io_dtx_committed_min",
-  "engine_io_dtx_committed_stddev",
-  "engine_io_ops_fetch_active_max",
-  "engine_io_ops_fetch_active_mean",
-  "engine_io_ops_fetch_active_min",
-  "engine_io_ops_fetch_active_stddev",
-  "engine_io_ops_update_active_max",
-  "engine_io_ops_update_active_mean",
-  "engine_io_ops_update_active_min",
-  "engine_io_ops_update_active_stddev"
-  ]
+telemetry_metrics:
+  io_test_metrics: [
+    "engine_io_dtx_committed",
+    "engine_io_dtx_committed_max",
+    "engine_io_dtx_committed_mean",
+    "engine_io_dtx_committed_min",
+    "engine_io_dtx_committed_stddev",
+    "engine_io_ops_fetch_active_max",
+    "engine_io_ops_fetch_active_mean",
+    "engine_io_ops_fetch_active_min",
+    "engine_io_ops_fetch_active_stddev",
+    "engine_io_ops_update_active_max",
+    "engine_io_ops_update_active_mean",
+    "engine_io_ops_update_active_min",
+    "engine_io_ops_update_active_stddev"
+    ]
+  io_test_metrics_threshold: 0
 ior:
   api: POSIX
   flags: "-v -w -k"
