CART-974 tests: Remove unused SCons var (dc_mgmt_tgts)
Test-tag: pr daily_regression

Signed-off-by: Ethan Mallove <ethanx.a.mallove@intel.com>

--- a/src/utils/self_test/SConscript
+++ b/src/utils/self_test/SConscript
@@ -13,8 +13,7 @@ SELF_TEST = 'self_test.c'
 def scons():
     """scons function"""
 
-    Import('env', 'prereqs', 'cart_lib', 'gurt_lib', 'cart_utils_objs',
-           'dc_mgmt_tgts')
+    Import('env', 'prereqs', 'cart_lib', 'gurt_lib', 'cart_utils_objs')
 
     tenv = env.Clone(LIBS=[])
 
