--- a/src/tests/ftest/ior/ior_small.yaml
+++ b/src/tests/ftest/ior/ior_small.yaml
@@ -52,7 +52,8 @@ ior:
             - MPIIO
             - POSIX
             - HDF5
-            - HDF5-VOL
+# Skip for DAOS-8207
+#            - HDF5-VOL
           transfer_block_size:
             - [256B, 2M]
             - [1M, 32M]
