CART-952 tests: Don't blow up logfile size (s/DEBUG/WARN/)
Skip-func-test-vm-valgrind: false

Signed-off-by: Ethan Mallove <ethanx.a.mallove@intel.com>

--- a/src/tests/ftest/cart/selftest/cart_selftest_three_node.yaml
+++ b/src/tests/ftest/cart/selftest/cart_selftest_three_node.yaml
@@ -5,7 +5,7 @@ ENV:
   default:
     #!filter-only : /run/env_CRT_CTX_SHARE_ADDR/no_sep
     #!filter-only : /run/tests/self_np
-    - D_LOG_MASK: "DEBUG"
+    - D_LOG_MASK: "WARN"
     - CRT_PHY_ADDR_STR: "ofi+sockets"
     - OFI_INTERFACE: "eth0"
     - test_servers_CRT_CTX_NUM: "16"
