--- a/utils/build.config
+++ b/utils/build.config
@@ -7,7 +7,7 @@ PMDK = 1.11.0
 ISAL = v2.30.0
 ISAL_CRYPTO = v2.23.0
 SPDK = 7232c450f97cf925a521a60ef2561eca4b65c41a
-OFI = v1.12.0
+OFI = 7d6d2a13411f8b5e793939493ed6e9f8b1c6a887
 OPENPA = v1.0.4
 MERCURY = v2.0.1
 PSM2 = PSM2_11.2.78
