DAOS-3509 Test: Simul testing
    Re-attempt

Quick-build: true
Skip-coverity-test: true
Skip-scan-centos-rpms: true
Skip-test-centos-rpms: true
Skip-func-hw-test: true
Skip-unit-test: true
Skip-unit-tests: true
Skip-nlt: true
Skip-unit-test-memcheck: true
Skip-func-hw-test: true
Skip-func-test-leap15: false
Test-tag-vm: posix

Signed-off-by: Omar Ocampo <omar.ocampo.coronado@intel.com>

--- a/src/tests/ftest/posix/simul.yaml
+++ b/src/tests/ftest/posix/simul.yaml
@@ -2,7 +2,7 @@ hosts:
   test_servers:
     - server-A
   test_clients:
-    - server-A
+    - client-A
 timeout: 120
 server_config:
   name: daos_server
