CART-974 tests: Add daos_agent awareness to cart_ctl
 * Add --use_daos_agent_env option to cart_ctl
 * Use --use_daos_agent_env (by default) in "cart_ctl add_log_msg" call

Signed-off-by: Ethan Mallove <ethanx.a.mallove@intel.com>

--- a/src/utils/ctl/SConscript
+++ b/src/utils/ctl/SConscript
@@ -15,8 +15,8 @@ def scons():
     Import('env', 'prereqs', 'cart_lib', 'gurt_lib', 'cart_utils_objs')
 
     tenv = env.Clone(LIBS=[])
-    tenv.AppendUnique(LIBS=['cart', 'gurt', 'pthread'])
-    prereqs.require(tenv, 'mercury')
+    tenv.AppendUnique(LIBS=['cart', 'gurt', 'pthread', 'daos', 'daos_common'])
+    prereqs.require(tenv, 'mercury', 'protobufc')
 
     ctl = daos_build.program(tenv, [SRC, cart_utils_objs])
     tenv.Install(os.path.join("$PREFIX", 'bin'), ctl)
