--- a/src/tests/ftest/osa/osa_offline_drain.yaml
+++ b/src/tests/ftest/osa/osa_offline_drain.yaml
@@ -53,7 +53,7 @@ container:
     type: POSIX
     control_method: daos
     oclass: RP_2G1
-    properties: cksum:crc64,cksum_size:16384,srv_cksum:on
+    properties: cksum:crc64,cksum_size:16384,srv_cksum:on,rf:1
 dkeys:
   single:
     no_of_dkeys:
