--- a/src/tests/ftest/control/dmg_telemetry_io_basic.yaml
+++ b/src/tests/ftest/control/dmg_telemetry_io_basic.yaml
@@ -34,7 +34,7 @@ telemetry_metrics:
     "engine_io_ops_update_active_min",
     "engine_io_ops_update_active_stddev"
     ]
-  io_test_metrics_threshold: 0
+  io_test_metrics_threshold: [0, 18446744073709552000]
 ior:
   api: POSIX
   flags: "-v -w -k"
