--- a/src/tests/ftest/server/metadata.yaml
+++ b/src/tests/ftest/server/metadata.yaml
@@ -57,7 +57,7 @@ pool:
   nvme_size: 8G
   control_method: dmg
 container:
-  control_method: daos
+  control_method: API
 ior:
   clientslots:
     slots: 1
