DAOS-7087 test: Write more than 1B to filled pool
Modify FullPoolContainerCreate test to write more than
1B to filled pool. Verifying by checking if the extra
written data to filled pool is under 0.1% of the pool
size.
Also added the provision to use 2 targets in the test
yaml file.

Quick-Functional: true
Test-tag: fullpoolcontcreate
Test-repeat-vm: 5

Signed-off-by: Saurabh Tandan <saurabh.tandan@intel.com>

--- a/src/tests/ftest/container/full_pool_container_create.yaml
+++ b/src/tests/ftest/container/full_pool_container_create.yaml
@@ -5,8 +5,11 @@ hosts:
     - server-A
 server_config:
    name: daos_server
+   servers:
+     targets: 2
 timeout: 150
 pool:
   control_method: dmg
   mode: 511
   scm_size: 134217728 # 16 mb pool, minimum size currently possible
+  threshold_percent: 0.001 # 0.1%
