--- a/utils/config/daos_server.yml
+++ b/utils/config/daos_server.yml
@@ -115,13 +115,14 @@
 #disable_vfio: true
 #
 #
-## Enable VMD Usage
+## Disable VMD Usage
 #
-## The use of Intel Volume Management Devices can be optionally enabled.
-## VMD needs to be available and configured in the ##system BIOS before use.
+## In some circumstances it may be preferable to not use Intel Volume Management
+## Devices even if available. VMD needs to be available and configured in the
+## system BIOS before use.
 #
-## default: false
-#enable_vmd: true
+## default: true
+#disable_vmd: false
 #
 #
 ## Use Hyperthreads
