--- a/src/tests/ftest/soak/soak_stress_2h.yaml
+++ b/src/tests/ftest/soak/soak_stress_2h.yaml
@@ -11,41 +11,14 @@ hosts:
     client_reservation: daos-test
 orterun:
     allow_run_as_root: True
+mpi_module: mpich/gnu-sockets
 # This timeout must be longer than the test_timeout param (+15minutes)
 # 2 hour test
-timeout: 1H15M
-setup:
-    start_servers: False
-    start_agents: False
-server_config:
-    name: daos_server
-    provider: ofi+sockets
-    control_log_mask: INFO
-    control_log_file: daos_control0.log
-    servers:
-        log_mask: ERR
-        fabric_iface: ib0
-        fabric_iface_port: 31416
-        log_mask: ERR
-        log_file: daos_io0.log
-        # Storage definitions for AEP and NVMe
-        scm_mount: /mnt/daos0
-        scm_class: dcpm
-        scm_list: [/dev/pmem0]
-        bdev_class: nvme
-        bdev_list: ["aaaa:aa:aa.a","bbbb:bb:bb.b"]
-    transport_config:
-      allow_insecure: True
-agent_config:
-    transport_config:
-      allow_insecure: True
-dmg:
-    transport_config:
-      allow_insecure: True
+timeout: 2H15M
 # pool_params - attributes of the pools to create; Currently only create one
 pool_jobs:
     name: daos_server
-    scm_size: 40GB
+    scm_size: 12GB
     nvme_size: 200GB
     properties: reclaim:time,ec_cell_sz:64KiB
     control_method: dmg
@@ -57,12 +30,11 @@ pool_reserved:
 container:
     type: POSIX
     properties: cksum:crc16,cksum_size:16384,srv_cksum:on
-    oclass: SX
     control_method: daos
 container_reserved:
     type: POSIX
-    properties: cksum:crc16,cksum_size:16384,srv_cksum:on
-    oclass: SX
+    properties: cksum:crc16,cksum_size:16384,srv_cksum:on,rf:1
+    oclass: EC_2P1GX
     control_method: daos
 # test_params - Defines the type of test to run and how long it runs
 #               It also defines how many pools and jobs to create
@@ -82,6 +54,7 @@ soak_stress:
     test_timeout: 2
     joblist:
         - ior_stress
+        - fio_stress
         - mdtest_stress
 # Commandline parameters
 # Benchmark and application params
@@ -111,33 +84,73 @@ ior_stress:
         - '64k'
     dfs_oclass:
         - 'SX'
+        - 'EC_2P1GX'
     dfuse:
         mount_dir: "/tmp/daos_dfuse/ior/"
         disable_caching: True
+fio_stress:
+  names:
+    - global
+    - test
+  global:
+    directory: "/tmp/daos_dfuse/fio/"
+    ioengine: 'libaio'
+    thread: 1
+    group_reporting: 1
+    direct: 1
+    verify: 'crc64'
+    iodepth: 16
+  test:
+    numjobs: 16
+  soak:
+    blocksize:
+        - '64K'
+        - '1M'
+    size:
+        - '500M'
+        - '1G'
+    rw:
+        - 'rw'
+        - 'randrw'
+    oclass:
+        - 'SX'
+  dfuse:
+    mount_dir: "/tmp/daos_dfuse/fio/"
+    disable_wb_caching: True
 mdtest_stress:
     # maximum timeout for a single job in test in minutes
-    job_timeout: 10
+    job_timeout: 40
     nodesperjob:
         - 1
+        - 4
     taskspernode:
-        - 1
+        - 4
     test_dir: "/"
     api:
         - 'DFS'
         - 'POSIX'
     iteration: 1
-    num_of_files_dirs: 1000
-    pre_iter: 10
+    num_of_files_dirs: 3000
+    branching_factor: 1
     flags: '-v'
     write_bytes:
         - 3901
     read_bytes:
         - 3901
     depth:
-        - 5
-    dfs_oclass: 'SX'
-    dfs_dir_oclass: 'S1'
+        - 10
+        - 0
+    dfs_oclass:
+        - 'S1'
+        - 'EC_2P1G1'
     dfs_destroy: False
     dfuse:
         mount_dir: "/tmp/daos_dfuse/mdtest/"
         disable_caching: True
+events:
+    - "mce: [Hardware Error]: Machine check events logged"
+    - "Package temperature above threshold"
+monitor:
+    - "/usr/bin/free -h"
+    - "/usr/bin/vmstat -w"
+    - "ps -C daos_engine -o %mem,%cpu,cmd"
