--- a/utils/build.config
+++ b/utils/build.config
@@ -7,7 +7,7 @@ PMDK = 1.11.0
 ISAL = v2.30.0
 ISAL_CRYPTO = v2.23.0
 SPDK = v21.07
-OFI = v1.12.0
+OFI = v1.13.1rc1
 OPENPA = v1.0.4
 MERCURY = v2.0.1
 PSM2 = PSM2_11.2.78
