Quick-Functional: true Skip-build-distro-rpm: true Skip-func-test-distro: true Skip-func-test-vm: true Skip-func-hw-test-medium: true Skip-func-hw-test-large: true
Signed-off-by: Samir Raval <samir.raval@intel.com>

--- a/src/tests/ftest/aggregation/aggregation_checksum.yaml
+++ b/src/tests/ftest/aggregation/aggregation_checksum.yaml
@@ -1,12 +1,14 @@
 hosts:
   test_servers:
     - server-A
+  test_clients:
+    - client-B
 timeout: 240
 server_config:
   name: daos_server
   servers:
     bdev_class: nvme
-    bdev_list: ["aaaa:aa:aa.a"]
+    bdev_list: ["0000:81:00.0"]
 pool:
   mode: 146
   name: daos_server
