Update test per review comments, merged cont_rf_oclass_enforcement with rebuild_container_rf.
       new file:   ../container/cont_rf_oclass_enforcement.py
       renamed:    ../rebuild/container_rf_enforce.yaml -> ../container/cont_rf_oclass_enforcement.yaml
       deleted:    ../rebuild/container_rf_enforce.py
       new file:   ../rebuild/rebuild_container_rf.py
       renamed:    ../rebuild/container_redundancy.yaml -> ../rebuild/rebuild_container_rf.yaml
       renamed:    ../rebuild/container_redundancy.py -> container_rf_test_base.py

Test-tag: container_rf
Signed-off-by: Ding Ho ding-hwa.ho@intel.com

--- a/src/tests/ftest/rebuild/rebuild_container_rf.yaml
+++ b/src/tests/ftest/rebuild/rebuild_container_rf.yaml
@@ -22,7 +22,11 @@ pool:
   pool_query_timeout: 30
 container:
   control_method: daos
-  properties: rf:2
+  cont_prop: !mux
+    rf_0:
+      properties: rf:0
+    rf_2:
+      properties: rf:2
   akey_size: 5
   dkey_size: 5
   data_size: 5
