Added Enable caching but skipped for now because of DAOS-8333.
Test-tag-hw-large: pr ec_truncate

Signed-off-by: Samir Raval <samir.raval@intel.com>

--- a/src/tests/ftest/erasurecode/ec_truncate.yaml
+++ b/src/tests/ftest/erasurecode/ec_truncate.yaml
@@ -79,4 +79,8 @@ fio:
   truncate_size: '26214400' #25Mb
 dfuse:
   mount_dir: "/tmp/daos_dfuse"
-  disable_caching: True
+  caching: !mux
+   disable:
+    disable_caching: True
+   enable:
+    enable_caching: True
