DAOS-8267 test: Enhance pool/list_pools.py to verify labels
In addition to the label check, refactor the code to use TestPool.

Skip-unit-tests: true
Test-tag: list_pools
Signed-off-by: Makito Kano <makito.kano@intel.com>

--- a/src/tests/ftest/pool/list_pools.yaml
+++ b/src/tests/ftest/pool/list_pools.yaml
@@ -6,8 +6,14 @@ hosts:
     - server-D
     - server-E
     - server-F
+
 timeout: 600
+
 server_config:
   name: daos_server
   servers:
     targets: 8
+
+pool:
+  control_method: dmg
+  size: 1G
